[package]
name = "ceramic"
version = "0.1.0"
authors = ["cryscan <cryscan@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "*", features = ["derive"]}
amethyst = {version = "0.15.0", features = ["vulkan", "animation", "gltf"]}
itertools = "0.9.0"
derive-new = "0.5.8"