[package]
name = "ceramic"
version = "0.1.0"
authors = ["cryscan <cryscan@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
getset = "0.1.1"
num-traits = "0.2"
rand = "0.7.3"
easer = "0.2.1"
interpolation = "0.2.0"

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan", "animation", "no-slow-safety-checks"]

[dependencies.amethyst_gltf]
path = "./amethyst_gltf"

[dependencies.serde]
version = "1.0"
features = ["derive"]