[package]
name = "ceramic"
version = "0.1.0"
authors = ["cryscan <cryscan@umich.edu>"]
edition = "2018"

[features]
default = ["vulkan"]

vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]

[dependencies]
amethyst_physics = "0.2.0"
amethyst_nphysics = "0.2.0"
itertools = "0.9.0"
getset = "0.1.1"
num-traits = "0.2"
rand = "0.7.3"
easer = "0.2.1"
interpolation = "0.2.0"
redirect = { path = "redirect" }
ceramic_derive = { path = "derive" }

[dependencies.amethyst]
version = "0.15.0"
features = ["animation", "no-slow-safety-checks"]

[dependencies.amethyst_gltf]
path = "./amethyst_gltf"

[dependencies.serde]
version = "1.0"
features = ["derive"]