[package]
name = "ceramic_derive"
version = "0.1.0"
authors = ["cryscan <cryscan@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"
proc_macro_roids = "0.7.0"

[lib]
proc-macro = true